# pyscail

./: .gitignore  LICENSE  Makefile  README.md  TODO.txt  conwayGrid.py  graphics.py  grid.py  main.py  pyproject.toml  pyscail.py  settings.py
demos/: ant.py  belusov-zhabotinsky.py  demo.py  game-of-life.py  grain.py  grain_only_boundary.py  julia.py  old-demo.py  rock-paper-scissors.py  stable-rock-paper-scissors.py
demos/everything/: ant.py  bz.py  everything.py  extinction.py  grain.py  mandelbrot.py  rps.py  settings.py  wireworld.py
demos/fractals/: cyclic-colors-julia.py  cyclic-colors-mandelbrot.py  julia.py  mandelbrot.py
scail-format/: python-scail.txt
src/: game-of-life.py  grid.py  julia.py  main.py  pyscail.py  settings.py  wireworld.py
src/pyscail/: __init__.py  graphics.py  grid.py  kernels.py  pyscail.py
tests/: tests.py
